--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,14 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <title>Vidhyashala Academy</title>
 </head>
 
 <body>
     <div class="wrapper">
-        <!--Header-->
-        <div class="header" id="myHeader">
+         <!--Header-->
+         <div class="header" id="myHeader">
             <div class="topHeader p-3">
                 <div class="container">
                     <div class="row top-left d-flex">
@@ -44,11 +44,11 @@
                 </div>
             </div>
             <div class="container navBottom">
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar navbar-expand-lg row">
 
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
-                            <img src="assets/images/svgLogo.svg" class="img-fluid" width="200">
+                        <a class="navbar-brand" href="index.html">
+                            <img alt="VidhyashalaLogo" src="assets/images/svgLogo.svg" class="img-fluid" width="200">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
@@ -60,13 +60,13 @@
                             <div class="navbar-nav">
                                 <ul class="d-flex mb-0">
                                     <li>
-                                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                     </li>
                                     <li>
                                         <a class="nav-link" href="home.html">About</a>
                                     </li>
                                     <li class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                             aria-expanded="false">Course</a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <li><a class="dropdown-item" href="ssc.html">10TH</a></li>
@@ -77,36 +77,30 @@
                                             <li><a class="dropdown-item" href="#">Computer Science</a></li>
                                         </ul>
                                     </li>
-                                    <!-- <li>
-                                        <a class="nav-link">Blog</a>
-                                    </li> -->
                                     <li>
                                         <a class="nav-link">Founder</a>
                                     </li>
                                     <!-- <li class="dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Branch</a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a class="dropdown-item" href="#">MULUND</a></li>
+                                            <li><a class="dropdown-item" href="branches.html">MULUND</a></li>
                                             <li><a class="dropdown-item" href="#">BHANDUP</a></li>
                                         </ul>
                                     </li> -->
                                     <li>
-                                        <a class="nav-link">Career</a>
-                                    </li>
-                                    <li>
                                         <a class="nav-link" href="contact.html">Contact</a>
                                     </li>
                                     <li>
-                                        <a class="nav-link" href="#"><i class="fa fa-facebook"
-                                                aria-hidden="true"></i></a>
+                                        <a class="nav-link" target="_blank"
+                                            href="https://www.facebook.com/VidhyashalaAcademy1?mibextid=ZbWKwL"><i
+                                                class="fa fa-facebook" aria-hidden="true"  ></i></a>
                                     </li>
                                     <li>
-                                        <a class="nav-link" href="#"><i class="fa fa-instagram"
-                                                aria-hidden="true"></i></a>
+                                        <a class="nav-link"   target="_blank" href="https://instagram.com/vidhyashalaacademy?igshid=MjEwN2IyYWYwYw=="><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                     <li>
-                                        <a class="nav-link" href="#"><i class="fa fa-youtube-play"
-                                                aria-hidden="true"></i></a>
+                                        <a class="nav-link" target="_blank" href="https://youtube.com/@vidhyashalaacademy9074 "><i
+                                                class="fa fa-youtube-play" aria-hidden="true" ></i></a>
                                     </li>
                                 </ul>
 
