--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <title>Vidhyashala Academy</title>
 </head>
 
 <body>
     <div class="wrapper">
         <!--Header-->
-
         <div class="header" id="myHeader">
             <div class="topHeader p-3">
                 <div class="container">
@@ -49,7 +49,7 @@
                 <nav class="navbar navbar-expand-lg row">
 
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="index.html">
                             <img alt="VidhyashalaLogo" src="assets/images/svgLogo.svg" class="img-fluid" width="200">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -62,13 +62,13 @@
                             <div class="navbar-nav">
                                 <ul class="d-flex mb-0">
                                     <li>
-                                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                     </li>
                                     <li>
                                         <a class="nav-link" href="home.html">About</a>
                                     </li>
                                     <li class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                             aria-expanded="false">Course</a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <li><a class="dropdown-item" href="ssc.html">10TH</a></li>
@@ -93,17 +93,16 @@
                                         <a class="nav-link" href="contact.html">Contact</a>
                                     </li>
                                     <li>
-                                        <a class="nav-link"
+                                        <a class="nav-link" target="_blank"
                                             href="https://www.facebook.com/VidhyashalaAcademy1?mibextid=ZbWKwL"><i
-                                                class="fa fa-facebook" aria-hidden="true"></i></a>
+                                                class="fa fa-facebook" aria-hidden="true"  ></i></a>
                                     </li>
                                     <li>
-                                        <a class="nav-link" href="https://instagram.com/vidhyashalaacademy?igshid=YmMyMTA2M2Y=
-                                        "><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                        <a class="nav-link"   target="_blank" href="https://instagram.com/vidhyashalaacademy?igshid=MjEwN2IyYWYwYw=="><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                     <li>
-                                        <a class="nav-link" href="https://youtube.com/@vidhyashalaacademy9074 "><i
-                                                class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                                        <a class="nav-link" target="_blank" href="https://youtube.com/@vidhyashalaacademy9074 "><i
+                                                class="fa fa-youtube-play" aria-hidden="true" ></i></a>
                                     </li>
                                 </ul>
 
