--- a/branches.html
+++ b/branches.html
@@ -23,96 +23,94 @@
 
 <body>
     <div class="wrapper">
-        <!--Header-->
-
-        <div class="header" id="myHeader">
-            <div class="topHeader p-3">
-                <div class="container">
-                    <div class="row top-left d-flex">
-                        <div class="">
-                            <span class="top-phone me-3">
-                                <i class="fa fa-phone me-2" aria-hidden="true"></i><a href="tel:+9167322376">+91
-                                    9167322376</a></span>
+     <!--Header-->
+     <div class="header" id="myHeader">
+        <div class="topHeader p-3">
+            <div class="container">
+                <div class="row top-left d-flex">
+                    <div class="">
+                        <span class="top-phone me-3">
+                            <i class="fa fa-phone me-2" aria-hidden="true"></i><a href="tel:+9167322376">+91
+                                9167322376</a></span>
+                        </span>
+                        <span class="top-email">
+                            <i class="fa fa-envelope me-2" aria-hidden="true"></i>
+                            <span class="attesa-email">
+                                <a href="mailto:vidhyashalaacademy@gmail.com">vidhyashalaacademy@gmail.com</a>
                             </span>
-                            <span class="top-email">
-                                <i class="fa fa-envelope me-2" aria-hidden="true"></i>
-                                <span class="attesa-email">
-                                    <a href="mailto:vidhyashalaacademy@gmail.com">vidhyashalaacademy@gmail.com</a>
-                                </span>
-                            </span>
-                        </div>
+                        </span>
                     </div>
                 </div>
             </div>
-            <div class="container navBottom">
-                <nav class="navbar navbar-expand-lg row">
+        </div>
+        <div class="container navBottom">
+            <nav class="navbar navbar-expand-lg row">
 
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
-                            <img alt="VidhyashalaLogo" src="assets/images/svgLogo.svg" class="img-fluid" width="200">
-                        </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse justify-content-end head_cont align-self-center"
-                            id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
-                                <ul class="d-flex mb-0">
-                                    <li>
-                                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                                    </li>
-                                    <li>
-                                        <a class="nav-link" href="home.html">About</a>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
-                                            aria-expanded="false">Course</a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a class="dropdown-item" href="ssc.html">10TH</a></li>
-                                            <li><a class="dropdown-item" href="science.html">11TH/12TH SCIENCE</a></li>
-                                            <li><a class="dropdown-item" href="commerce.html">11TH/12TH COMMERCE</a>
-                                            </li>
-                                            <li><a class="dropdown-item" href="#">CBSE</a></li>
-                                            <li><a class="dropdown-item" href="#">Computer Science</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a class="nav-link">Founder</a>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Branch</a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a class="dropdown-item" href="#">MULUND</a></li>
-                                            <li><a class="dropdown-item" href="#">BHANDUP</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a class="nav-link" href="contact.html">Contact</a>
-                                    </li>
-                                    <li>
-                                        <a class="nav-link" href="#"><i class="fa fa-facebook"
-                                                aria-hidden="true"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="nav-link" href="https://instagram.com/vidhyashalaacademy?igshid=YmMyMTA2M2Y=
-                                        "><i class="fa fa-instagram"
-                                                aria-hidden="true"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="nav-link" href="https://youtube.com/@vidhyashalaacademy9074 "><i class="fa fa-youtube-play"
-                                                aria-hidden="true"></i></a>
-                                    </li>
-                                </ul>
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img alt="VidhyashalaLogo" src="assets/images/svgLogo.svg" class="img-fluid" width="200">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end head_cont align-self-center"
+                        id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <ul class="d-flex mb-0">
+                                <li>
+                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" href="index.html">About</a>
+                                </li>
+                                <li class="dropdown">
+                                    <a class="nav-link dropdown-toggle" href="home.html" data-bs-toggle="dropdown"
+                                        aria-expanded="false">Course</a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <li><a class="dropdown-item" href="ssc.html">10TH</a></li>
+                                        <li><a class="dropdown-item" href="science.html">11TH/12TH SCIENCE</a></li>
+                                        <li><a class="dropdown-item" href="commerce.html">11TH/12TH COMMERCE</a>
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">CBSE</a></li>
+                                        <li><a class="dropdown-item" href="#">Computer Science</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a class="nav-link">Founder</a>
+                                </li>
+                                <!-- <li class="dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Branch</a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <li><a class="dropdown-item" href="branches.html">MULUND</a></li>
+                                        <li><a class="dropdown-item" href="#">BHANDUP</a></li>
+                                    </ul>
+                                </li> -->
+                                <li>
+                                    <a class="nav-link" href="contact.html">Contact</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" target="_blank"
+                                        href="https://www.facebook.com/VidhyashalaAcademy1?mibextid=ZbWKwL"><i
+                                            class="fa fa-facebook" aria-hidden="true"  ></i></a>
+                                </li>
+                                <li>
+                                    <a class="nav-link"   target="_blank" href="https://instagram.com/vidhyashalaacademy?igshid=MjEwN2IyYWYwYw=="><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" target="_blank" href="https://youtube.com/@vidhyashalaacademy9074 "><i
+                                            class="fa fa-youtube-play" aria-hidden="true" ></i></a>
+                                </li>
+                            </ul>
 
-                            </div>
                         </div>
                     </div>
-                </nav>
-            </div>
+                </div>
+            </nav>
         </div>
-        <!--Header-->
+    </div>
+    <!--Header-->
 
         <!-- Branches -->
         <section id="branches" class="text-secondary">
