--- a/commerce.html
+++ b/commerce.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
-
+    
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <title>Vidhyashala Academy</title>
     <script type="text/javascript" src="/js/jquery-2.2.4.min.js"></script>
 
@@ -49,62 +50,84 @@
 
 <body>
     <div class="wrapper">
-        <!--Header-->
-        <div class="header" id="myHeader">
-            <div class="container">
-                <nav class="navbar navbar-expand-lg">
+         <!--Header-->
+         <div class="header" id="myHeader">
+            <div class="topHeader p-3">
+                <div class="container">
+                    <div class="row top-left d-flex">
+                        <div class="">
+                            <span class="top-phone me-3">
+                                <i class="fa fa-phone me-2" aria-hidden="true"></i><a href="tel:+9167322376">+91
+                                    9167322376</a></span>
+                            </span>
+                            <span class="top-email">
+                                <i class="fa fa-envelope me-2" aria-hidden="true"></i>
+                                <span class="attesa-email">
+                                    <a href="mailto:vidhyashalaacademy@gmail.com">vidhyashalaacademy@gmail.com</a>
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container navBottom">
+                <nav class="navbar navbar-expand-lg row">
+
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
-                            <img src="assets/images/logo_png.png" class="img-fluid" width="200">
+                        <a class="navbar-brand" href="index.html">
+                            <img alt="VidhyashalaLogo" src="assets/images/svgLogo.svg" class="img-fluid" width="200">
                         </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                            aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse justify-content-end head_cont align-self-center" id="navbarNavAltMarkup">
+                        <div class="collapse navbar-collapse justify-content-end head_cont align-self-center"
+                            id="navbarNavAltMarkup">
                             <div class="navbar-nav">
                                 <ul class="d-flex mb-0">
                                     <li>
-                                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                     </li>
                                     <li>
                                         <a class="nav-link" href="home.html">About</a>
                                     </li>
                                     <li class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Course</a>
+                                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                                            aria-expanded="false">Course</a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <li><a class="dropdown-item" href="ssc.html">10TH</a></li>
                                             <li><a class="dropdown-item" href="science.html">11TH/12TH SCIENCE</a></li>
-                                            <li><a class="dropdown-item" href="commerce.html">11TH/12TH COMMERCE</a></li>
+                                            <li><a class="dropdown-item" href="commerce.html">11TH/12TH COMMERCE</a>
+                                            </li>
                                             <li><a class="dropdown-item" href="#">CBSE</a></li>
+                                            <li><a class="dropdown-item" href="#">Computer Science</a></li>
                                         </ul>
                                     </li>
-                                    <!-- <li>
-                                        <a class="nav-link">Blog</a>
-                                    </li> -->
                                     <li>
                                         <a class="nav-link">Founder</a>
                                     </li>
                                     <!-- <li class="dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Branch</a>
                                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a class="dropdown-item" href="#">MULUND</a></li>
+                                            <li><a class="dropdown-item" href="branches.html">MULUND</a></li>
                                             <li><a class="dropdown-item" href="#">BHANDUP</a></li>
                                         </ul>
                                     </li> -->
                                     <li>
-                                        <a class="nav-link">Branch</a>
-                                    </li>
-                                    <li>
                                         <a class="nav-link" href="contact.html">Contact</a>
                                     </li>
                                     <li>
-                                        <a class="nav-link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                        <a class="nav-link" target="_blank"
+                                            href="https://www.facebook.com/VidhyashalaAcademy1?mibextid=ZbWKwL"><i
+                                                class="fa fa-facebook" aria-hidden="true"  ></i></a>
                                     </li>
                                     <li>
-                                        <a class="nav-link" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                        <a class="nav-link"   target="_blank" href="https://instagram.com/vidhyashalaacademy?igshid=MjEwN2IyYWYwYw=="><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     </li>
                                     <li>
-                                        <a class="nav-link" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                                        <a class="nav-link" target="_blank" href="https://youtube.com/@vidhyashalaacademy9074 "><i
+                                                class="fa fa-youtube-play" aria-hidden="true" ></i></a>
                                     </li>
                                 </ul>
 
