--- a/index.html
+++ b/index.html
@@ -137,15 +137,36 @@
                     <div class="row">
                         <div class="col-6 d-flex align-items-center">
                             <div class="studentReview text-center">
-                                <h1>Kahkashan Ansari</h1>
-                                <h2>PCM 98.80%</h2>
+                                <h1>VISHWESH NAIR</h1>
+                                <h2>PCM 89.33%</h2>
+                                <h2>JEE Mains 96.09%ile</h2>
                                 <p>“My experience at Vidhyashala Academy is great and memorable. The mentors at
                                     Vidhyashala Acedmy helped me enhance my academic and interpersonal skills.”</p>
                             </div>
                         </div>
                         <div class="col-6 d-flex justify-content-center">
                             <div class="">
-                                <img alt="DummyImage" src="assets/images/studentDummyImage.png"
+                                <img alt="DummyImage" src="assets/images/vishwesh.PNG"
+                                    class="img-fluid studentImage">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-6 d-flex align-items-center">
+                            <div class="studentReview text-center">
+                                <h1>12TH CBSE</h1>
+                                <h1>RISHABH HEGDE</h1>
+                                <h2>PCM 84.2%</h2>
+                                <p>“Teaching method is very good. Specially Raj sir's teaching method is unique and enjoyable. Hrishikesh sir's physics is very nice.All professors are very friendly and staffs also Manish sir's chemistry
+                                    Difficult sums are taught so smoothly that each and every word is understandable for each and every student.sitting areas are very comfortable.”</p>
+                            </div>
+                        </div>
+                        <div class="col-6 d-flex justify-content-center">
+                            <div class="">
+                                <img alt="DummyImage" src="assets/images/rishabh.PNG"
                                     class="img-fluid studentImage">
 
                             </div>
@@ -276,14 +297,15 @@
                 <footer class="py-5">
                     <div class="row">
 
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-2">
-                            <h5>Section</h5>
+                        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+                            <h5>Address</h5>
                             <ul class="nav flex-column">
                                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0">For Product Enquiries, call
-                                        on our Number 9321499398</a></li>
+                                        on our Number 9167322376</a></li>
                                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0">VIDHYASHALA ACADEMY
                                         311/312 ,3rd floor Shree Samarth Plaza near Ganatra Hospital RRT
                                         road Mulund West</a></li>
+                                <li class="nav-item mb-2"><a href="919167322376" class="nav-link p-0">9167322376</a></li>
 
                             </ul>
                         </div>
@@ -295,19 +317,6 @@
                                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Competitive Exams</a></li>
                                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0">School</a></li>
                                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Science</a></li>
-                            </ul>
-                        </div>
-
-
-
-                        <div class="col-12 col-sm-6 col-md-6 col-lg-2">
-                            <h5>Section</h5>
-                            <ul class="nav flex-column">
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Home</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Features</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Pricing</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0">FAQs</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0">About</a></li>
                             </ul>
                         </div>
 
