--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                             <div class="studentReview text-center">
                                 <h1>VISHWESH NAIR</h1>
                                 <h2>PCM 89.33%</h2>
+                                <h2>PCM 99.%65</h2>
                                 <h2>JEE Mains 96.09%ile</h2>
                                 <p>“My experience at Vidhyashala Academy is great and memorable. The mentors at
                                     Vidhyashala Acedmy helped me enhance my academic and interpersonal skills.”</p>
@@ -146,7 +147,7 @@
                         </div>
                         <div class="col-6 d-flex justify-content-center">
                             <div class="">
-                                <img alt="DummyImage" src="assets/images/vishwesh.PNG"
+                                <img alt="DummyImage" src="assets/images/vishwesh.png"
                                     class="img-fluid studentImage">
 
                             </div>
