--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         </div>
                         <div class="col-6 d-flex justify-content-center">
                             <div class="">
-                                <img alt="DummyImage" src="assets/images/rishabh.PNG"
+                                <img alt="DummyImage" src="assets/images/rishabh.png"
                                     class="img-fluid studentImage">
 
                             </div>
