--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
                                 <h2>PCM 89.33%</h2>
                                 <h2>PCM 99.%65</h2>
                                 <h2>JEE Mains 96.09%ile</h2>
-                                <p>“My experience at Vidhyashala Academy is great and memorable. The mentors at
-                                    Vidhyashala Acedmy helped me enhance my academic and interpersonal skills.”</p>
+                                <p>“First of all , the teachers at this coaching class are outstanding. 
+                                    They are highly qualified and have a deep understanding of the subjects they teach. Their guidance and expertise have really helped me grasp tough topics and boost my confidence. I was provided personalized counseling and guidance for entrance exam due to which iwas able to score around 96 percentile in my jee mains and I'm hopeful for my jee advanced result too.
+                                     I would recommend you to join this classes ”</p>
                             </div>
                         </div>
                         <div class="col-6 d-flex justify-content-center">
@@ -161,13 +162,32 @@
                                 <h1>12TH CBSE</h1>
                                 <h1>RISHABH HEGDE</h1>
                                 <h2>PCM 84.2%</h2>
-                                <p>“Teaching method is very good. Specially Raj sir's teaching method is unique and enjoyable. Hrishikesh sir's physics is very nice.All professors are very friendly and staffs also Manish sir's chemistry
-                                    Difficult sums are taught so smoothly that each and every word is understandable for each and every student.sitting areas are very comfortable.”</p>
+                                <p>“Vidyashala academy really helped me in 11-12th Science. They made the concepts seem very easy. The teachers would solve my doubts at any time whenever I needed. They also arrange various fun activities like picnics, movies etc. 
+                                    The teachers are also very friendly and are ready to help in every problem.”</p>
                             </div>
                         </div>
                         <div class="col-6 d-flex justify-content-center">
                             <div class="">
                                 <img alt="DummyImage" src="assets/images/rishabh.png"
+                                    class="img-fluid studentImage">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-6 d-flex align-items-center">
+                            <div class="studentReview text-center">
+                                <h1>12TH COMMERCE</h1>
+                                <h1>SHWETA PARANDE</h1>
+                                <h2>77.33%</h2>
+                                <p>“Excellent teaching.Professors are very helpful and they provide personal attention.Amazing class!!”</p>
+                            </div>
+                        </div>
+                        <div class="col-6 d-flex justify-content-center">
+                            <div class="">
+                                <img alt="DummyImage" src="assets/images/ShwethaParande.png"
                                     class="img-fluid studentImage">
 
                             </div>
