--- a/index.html
+++ b/index.html
@@ -232,43 +232,56 @@
                         </div>
                         <div class="col-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
                             <h3>Experienced Faculty</h3>
-                            <p>The faculty at Vidhyashala Academy comprises of IIT-ians and professors from other
-                                leading universities which will train students to tackle their hardest problems and
-                                there by helping them crack competitive exams.</p>
+                            <p>Our faculty members are experts in their respective fields, bringing in-depth knowledge and years of experience to the classroom. Whether it's science, commerce, or engineering, our educators are well-versed in the curriculum and ensure that students receive comprehensive and up-to-date information.</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
                             <h3>Personalized Attention</h3>
-                            <p>Vidhyashala Academy have an outstanding and highly educated faculties who value
-                                individualized attention and facilitates student comprehension. Since small class size
-                                encourages learning, we have a batch size of only 30 students.</p>
+                            <p>At <strong>Vidhyashala Academy</strong>, we understand that every student is unique, and their learning journey should reflect that individuality. One of the cornerstones of our educational philosophy is the commitment to providing personalized attention to each student.</p>
                         </div>
                         <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                             <img src="assets/images/personal_trainig" class="img-fluid">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row ">
                         <div class="col-12 col-md-6 col-lg-6 col-xl-6">
                             <img src="assets/images/studymat1.png" class="img-fluid">
                         </div>
                         <div class="col-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
                             <h3>Unique Study Materials</h3>
-                            <p>Study material for Engineering,MHT-CET and JEE are abridged by Shelar sir whereas for
-                                other courses notes are compiled by our experienced faculty. Study Materials at
-                                Vidhyashala Academy is designed carefully after analyzing all the previous year question
-                                papers. This helps the students to understand the gist of the chapter better..</p>
-                        </div>
+                            <p>At <strong>Vidhyashala Academy</strong>, we believe that exceptional study materials are the cornerstone of a successful academic journey. Our commitment to excellence is reflected in the development and implementation of unique study materials designed to elevate the learning experience for our students.</p>
+                           <!-- <div class="UniqueStudyMaterial">
+                            <div class="row"> -->
+                                <!-- <div class="col-6"> -->
+                                    <!-- 1. Tailored for Your Curriculum <br>
+                                    2. Incorporating Real-World Applications <br>
+                                    3. Interactive and Multimedia Elements <br>
+                                    4. Supplementary Resources for Enrichment -->
+                                <!-- </div> -->
+                                <!-- <div class="col-6">
+                                    2. Incorporating Real-World Applications
+                                </div> -->
+                            <!-- </div> -->
+                            <!-- <div class="row">
+                                <div class="col-6">
+                                    3. Interactive and Multimedia Elements
+                                </div>
+                                <div class="col-6">
+                                    4. Supplementary Resources for Enrichment
+                                </div>
+                            </div> -->
+                        <!-- </div>
+                        </div> -->
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-6 col-xl-6 align-self-center">
                             <h3>Regular Tests</h3>
-                            <p>Conducting a test is an important parameter to determine how well the student has
-                                understood a concept. All the papers are assessed by our experienced professors itself.
-                                All the tests so conducted are based on the current exam pattern.</p>
+                            <p>
+                                At our institute, we use tests to see how well you've understood things. Our experienced teachers review all your answers carefully. These tests are designed to be like your actual exams, helping you get familiar with the kind of questions you'll face. It's not just about scores; it's about making sure you really get what you're learning. Join us at Vidhyashala Academy, where tests are a friendly way to help you learn and do your best!</p>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-6 col-xl-6">
-                            <img src="assets/images/regular_test.png" class="img-fluid">
+                        <div class="col-12 col-md-6 col-lg-6 col-xl-6 d-flex justify-content-center">
+                            <img src="assets/images/regular_test.png"  height="450">
                         </div>
                     </div>
                     <div class="row">
