--- a/science.html
+++ b/science.html
@@ -5,139 +5,148 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="index,follow">
+    <title>Contact | Vidhyashala Academy - Expert Coaching</title>
+    <meta name="description"
+        content="Contact Vidhyashala Academy for expert coaching in VIII, IX, X, XI-XII Science and Commerce, DEGREE ENGINEERING, and CS.">
+    <link rel="canonical" href="https://www.vidhyashalaacademy.com/science.html">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
 
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
-    <title>Vidhyashala Academy</title>
-    <script type="text/javascript" src="/js/jquery-2.2.4.min.js"></script>
 
-    <script>		
-        var base_url = 'https://saraswaticlasses.com/';
-    </script>
-    <script>
-        // jQuery to collapse the navbar on scroll
-        function collapseNavbar() {
-            if ($(".navbar").offset().top > 50) {
-                $(".navbar-fixed-top").addClass("top-nav-collapse");
-            } else {
-                $(".navbar-fixed-top").removeClass("top-nav-collapse");
-            }
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Vidhyashala Academy",
+          "url": "https://www.vidhyashalaacademy.com/",
+          "logo": "https://www.vidhyashalaacademy.com/assets/images/svgLogo.svg",
+          "description": "Expert coaching for 8th-12th Science and Commerce students.",
+          "keywords": "Mulund, best classes, Best coaching institute, 8th, VIII, 9th, IX, 10th, X, 11th, XI, 12th, XII, science, commerce, engineering, CBSE, ICSE, SSC, private tutoring, Top-rated tutors, Experienced faculty, Comprehensive study materials, Personalized learning, Effective teaching methods, Proven track record, Competitive exam preparation, Entrance exam coaching, Top-performing students, Affordable fees, Online classes availability, Flexible timings, Interactive learning environment, Mulund East, Mulund West, Computer Science, IT, BSc-IT, Engineering",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "311/312, Shree Samarth Plaza, RRT Road, Mulund West",
+            "addressLocality": "Mumbai",
+            "addressRegion": "Maharashtra",
+            "postalCode": "400080",
+            "addressCountry": "IN"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+91 9167322376",
+            "contactType": "customer service"
+          }
         }
-        $(window).scroll(collapseNavbar);
-        $(document).ready(collapseNavbar);
-    </script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153108470-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-153108470-1');
     </script>
 </head>
 
 <body>
     <div class="wrapper">
-      <!--Header-->
-      <div class="header" id="myHeader">
-        <div class="topHeader p-3">
-            <div class="container">
-                <div class="row top-left d-flex">
-                    <div class="">
-                        <span class="top-phone me-3">
-                            <i class="fa fa-phone me-2" aria-hidden="true"></i><a href="tel:+9167322376">+91
-                                9167322376</a></span>
-                        </span>
-                        <span class="top-email">
-                            <i class="fa fa-envelope me-2" aria-hidden="true"></i>
-                            <span class="attesa-email">
-                                <a href="mailto:vidhyashalaacademy@gmail.com">vidhyashalaacademy@gmail.com</a>
-                            </span>
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container navBottom">
-            <nav class="navbar navbar-expand-lg row">
-
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">
-                        <img alt="VidhyashalaLogo" src="assets/images/svgLogo.svg" class="img-fluid" width="200">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end head_cont align-self-center"
-                        id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <ul class="d-flex mb-0">
-                                <li>
-                                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                                </li>
-                                <li>
-                                    <a class="nav-link" href="home.html">About</a>
-                                </li>
-                                <li class="dropdown">
-                                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
-                                        aria-expanded="false">Course</a>
-                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="ssc.html">10TH</a></li>
-                                        <li><a class="dropdown-item" href="science.html">11TH/12TH SCIENCE</a></li>
-                                        <li><a class="dropdown-item" href="commerce.html">11TH/12TH COMMERCE</a>
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">CBSE</a></li>
-                                        <li><a class="dropdown-item" href="#">Computer Science</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a class="nav-link">Founder</a>
-                                </li>
-                                <!-- <li class="dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Branch</a>
-                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="branches.html">MULUND</a></li>
-                                        <li><a class="dropdown-item" href="#">BHANDUP</a></li>
-                                    </ul>
-                                </li> -->
-                                <li>
-                                    <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
-                                <li>
-                                    <a class="nav-link" target="_blank"
-                                        href="https://www.facebook.com/VidhyashalaAcademy1?mibextid=ZbWKwL"><i
-                                            class="fa fa-facebook" aria-hidden="true"  ></i></a>
-                                </li>
-                                <li>
-                                    <a class="nav-link"   target="_blank" href="https://instagram.com/vidhyashalaacademy?igshid=MjEwN2IyYWYwYw=="><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                </li>
-                                <li>
-                                    <a class="nav-link" target="_blank" href="https://youtube.com/@vidhyashalaacademy9074 "><i
-                                            class="fa fa-youtube-play" aria-hidden="true" ></i></a>
-                                </li>
-                            </ul>
-
+           <!--Header-->
+           <header>
+            <div class="header" id="myHeader">
+                <div class="topHeader p-3">
+                    <div class="container">
+                        <div class="row top-left d-flex">
+                            <div class="">
+                                <span class="top-phone me-3">
+                                    <i class="fa fa-phone me-2" aria-hidden="true"></i><a href="tel:+9167322376">+91
+                                        9167322376</a>
+                                </span>
+                                <span class="top-email">
+                                    <i class="fa fa-envelope me-2" aria-hidden="true"></i>
+                                    <span class="attesa-email">
+                                        <a href="mailto:vidhyashalaacademy@gmail.com">vidhyashalaacademy@gmail.com</a>
+                                    </span>
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </nav>
-        </div>
-    </div>
-    <!--Header-->
+                <div class="container navBottom">
+                    <nav class="navbar navbar-expand-lg row">
+
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="index.html">
+                                <img alt="VidhyashalaLogo" src="assets/images/svgLogo.svg" class="img-fluid"
+                                    width="200">
+                            </a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse justify-content-end head_cont align-self-center"
+                                id="navbarNavAltMarkup">
+                                <div class="navbar-nav">
+                                    <ul class="d-flex mb-0">
+                                        <li>
+                                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                        </li>
+                                        <li>
+                                            <a class="nav-link" href="about.html">About</a>
+                                        </li>
+                                        <li class="dropdown">
+                                            <a class="nav-link dropdown-toggle" href="" data-bs-toggle="dropdown"
+                                                aria-expanded="false">Course</a>
+                                            <ul class="dropdown-menu">
+                                                <li><a class="dropdown-item" href="ssc.html">10TH</a></li>
+                                                <li><a class="dropdown-item" href="science.html">11TH/12TH SCIENCE</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="commerce.html">11TH/12TH COMMERCE</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="#">CBSE</a></li>
+                                                <li><a class="dropdown-item" href="#">Computer Science</a></li>
+                                            </ul>
+                                        </li>
+
+                                        <!-- <li><a class="nav-link">Founder</a></li> -->
+
+                                        <li>
+                                            <a class="nav-link" href="contact.html">Contact</a>
+                                        </li>
+                                        <li>
+                                            <a class="nav-link" target="_blank"
+                                                href="https://www.facebook.com/VidhyashalaAcademy1?mibextid=ZbWKwL"><i
+                                                    class="fa fa-facebook" aria-hidden="true"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="nav-link" target="_blank"
+                                                href="https://instagram.com/vidhyashalaacademy?igshid=MjEwN2IyYWYwYw=="><i
+                                                    class="fa fa-instagram" aria-hidden="true"></i></a>
+                                        </li>
+                                        <li>
+                                            <a class="nav-link" target="_blank"
+                                                href="https://youtube.com/@vidhyashalaacademy9074 "><i
+                                                    class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                                        </li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <!--Header-->
 
 
         <!-- SCHOOL SECTION SC -->
